- Use the old defaults for daemon jvm args, for m7. Will revisit for m8. - Look in $rootDir/gradle.properties and ~/.gradle/gradle.properties for 'org.gradle.daemon' to allow the daemon to be enabled/disabled for a particular build, or globally for a particular user. - Can still use -Dorg.gradle.daemon and --daemon/--no-daemon